--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,15 +18,22 @@
         </activity>
         <activity
             android:name=".NewCharActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_new_char" >
         </activity>
         <activity
             android:name=".DieRollerActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_die_roller" >
         </activity>
         <activity
             android:name=".SpellBookActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_spell_book" >
+        </activity>
+        <activity
+            android:name=".SavedCharacterActivity"
+            android:label="@string/title_activity_saved_character" >
         </activity>
     </application>
 
