--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/d20"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -33,7 +33,17 @@
         </activity>
         <activity
             android:name=".SavedCharacterActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_saved_character" >
+        </activity>
+        <activity
+            android:name=".NewCharacterSpells"
+            android:configChanges="orientation|screenSize"
+            android:label="@string/title_activity_new_character_spells" >
+        </activity>
+        <activity
+            android:name=".StatDistributionActivity"
+            android:label="@string/title_activity_stat_distribution" >
         </activity>
     </application>
 
